# journey

./: .env.example  .gitignore  Cargo.toml
docmyrust/: Cargo.toml
docmyrust/src/: lib.rs
docs/: example.md  main.md
src/: main.rs
src/commands/: dice.rs  example.rs  mod.rs
