[package]
name = "journey"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6"
dotenv = "0.15.0"
rand = "0.8.5"
tracing = "0.1.23"
tracing-subscriber = "0.3"
regex = "1.11.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework"]
